# gb-recreation

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  INITIAL_PROMPT.md  README.md
.claude/commands/: goal.md
.claude/skills/dev-blog/: SKILL.md
.claude/skills/git-github/: SKILL.md
.claude/skills/github-issues/: SKILL.md
.claude/skills/grand-master-plan/: SKILL.md
.claude/skills/improvements/: SKILL.md
.claude/skills/self-improvement/: SKILL.md
.claude/skills/task-execution/: SKILL.md
.claude/skills/testing-validation/: SKILL.md
.github/workflows/: ci.yml  pages.yml
docs/: GRAND_MASTER_PLAN.md
docs/blog/: index.html  posts.json  style.css
docs/blog/posts/: 2026-07-22-booting-to-the-title-screen.html  2026-07-22-workspace-and-how-it-is-driven.html  2026-07-23-blocks-coins-and-getting-big.html  2026-07-23-build-your-own-level.html  2026-07-23-closing-the-loop.html  2026-07-23-enemies-stomps-and-dying.html  (+4 more)
docs/reference/: faithfulness.md  level-1-1.md  level-format.md  physics.md  title-screen.md
levels/: example.txt
src/: audio.rs  camera.rs  font.rs  frontend.rs  game.rs  lib.rs  main.rs  png.rs  rom.rs  scene.rs  session.rs  sound.rs  tiles.rs  tuning.rs
src/assets/: mod.rs  title.rs
src/core/: animation.rs  block.rs  enemy.rs  entity.rs  level.rs  mod.rs  physics.rs  powerup.rs  superball.rs
src/input/: mapping.rs  mod.rs
src/render/: mod.rs
tests/: golden.rs
tools/: dump_title_map.py  extract_level_1_1.py  extract_title.py  find_mario_speed.py  find_rom_offset.py  sml_boot.py  stitch_level_1_1.py
