[package]
name = "sml"
version = "0.0.1"
edition = "2021"
description = "A native, readable Rust reproduction of Super Mario Land. Not an emulator."
license = "MIT"
publish = false

[[bin]]
name = "sml"
path = "src/main.rs"

[lib]
name = "sml"
path = "src/lib.rs"

[features]
# The windowed frontend is opt-in so default builds and CI stay dependency-free
# and headless. Build it with: cargo run --features gui -- run
gui = ["dep:minifb", "dep:cpal"]

[dependencies]
cpal = { version = "0.18.1", optional = true }
minifb = { version = "0.27", optional = true }
